[package]
name = "lscolors"
description = "Colorize paths using the LS_COLORS environment variable"
categories = ["command-line-interface"]
homepage = "https://github.com/sharkdp/lscolors"
repository = "https://github.com/sharkdp/lscolors"
keywords = [
    "cli",
    "linux",
    "terminal",
    "filesystem",
    "color"
]
license = "MIT/Apache-2.0"
version = "0.5.0"
readme = "README.md"
edition = "2018"
authors = ["David Peter <mail@david-peter.de>"]

[dependencies]
ansi_term = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "^3"

[features]
default = ["ansi_term"]

[[bin]]
name = "lscolors"
path = "src/bin.rs"
required-features = ["ansi_term"]
