[package]
name = "lscolors"
description = "Colorize paths using the LS_COLORS environment variable"
categories = ["command-line-interface"]
homepage = "https://github.com/sharkdp/lscolors"
repository = "https://github.com/sharkdp/lscolors"
keywords = [
    "cli",
    "linux",
    "terminal",
    "filesystem",
    "color",
]
license = "MIT/Apache-2.0"
version = "0.17.0"
readme = "README.md"
edition = "2021"
authors = ["David Peter <mail@david-peter.de>"]
rust-version = "1.63.0"

[features]
default = ["nu-ansi-term"]
gnu_legacy = ["nu-ansi-term/gnu_legacy"]

[dependencies]
ansi_term = { version = "0.12", optional = true }
nu-ansi-term = { version = "0.50", optional = true }
crossterm = { version = "0.27", optional = true }

[dev-dependencies]
tempfile = "^3"

[[bin]]
name = "lscolors"
path = "src/bin.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
